[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/Player3D_FP/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://szenen/Level2.tscn" type="PackedScene" id=2]
[ext_resource path="res://szenen/Level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://szenen/Level3.tscn" type="PackedScene" id=4]
[ext_resource path="res://szenen/Tempel.tscn" type="PackedScene" id=5]
[ext_resource path="res://GDACH/Tempel/mat/redisch.material" type="Material" id=6]
[ext_resource path="res://GDACH/Tempel/mesh/Atlas_Pose.mesh" type="ArrayMesh" id=7]
[ext_resource path="res://GDACH/Tempel/mesh/aa_01_b1.mesh" type="ArrayMesh" id=8]
[ext_resource path="res://GDACH/Tempel/mesh/Statue_01.mesh" type="ArrayMesh" id=9]
[ext_resource path="res://GDACH/Tempel/mesh/Statue_03_1.mesh" type="ArrayMesh" id=10]
[ext_resource path="res://GDACH/Tempel/mesh/Statue_03_2.mesh" type="ArrayMesh" id=11]
[ext_resource path="res://GDACH/Tempel/mesh/Saule_01.mesh" type="ArrayMesh" id=12]
[ext_resource path="res://GDACH/Tempel/mesh/Statue_02.mesh" type="ArrayMesh" id=13]
[ext_resource path="res://skript/Info.gd" type="Script" id=14]
[ext_resource path="res://GDACH/Tempel/mesh/a_01_a1.mesh" type="ArrayMesh" id=15]
[ext_resource path="res://GDACH/Tempel/mesh/aa_01_w1.mesh" type="ArrayMesh" id=16]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( 0.0871556, 0, -0.996195, 0, 1, 0, 0.996195, 0, 0.0871556 )
ambient_light_color = Color( 0.431373, 0.419608, 0.419608, 1 )
fog_color = Color( 0.0470588, 0.0509804, 0.054902, 1 )
fog_sun_color = Color( 0.0156863, 0.0156863, 0.0117647, 1 )
fog_depth_end = 30.0

[sub_resource type="SphereMesh" id=3]
flip_faces = true
radius = 0.05
height = 0.1
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.133333, 0.713726, 1, 1 )
metallic_specular = 1.0
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[node name="Main" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Light" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Light"]
transform = Transform( -0.0238994, -0.905769, 0.423098, -0.0510823, 0.423773, 0.904327, -0.998408, 0, -0.0563966, 0, 32.2961, 0 )
light_energy = 3.0
shadow_enabled = true

[node name="OmniLight" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7131, 7.15483, -57.499 )
light_energy = 2.55
shadow_enabled = true
omni_range = 12.0

[node name="OmniLight10" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.1921, 3.9719, -53.9722 )
light_energy = 2.0
light_indirect_energy = 10.0
shadow_enabled = true
omni_range = 12.0

[node name="OmniLight5" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.5302, 10.048, -1.04289 )
light_energy = 2.55
shadow_enabled = true
omni_range = 14.4943

[node name="OmniLight6" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.3134, 11.0281, -12.0687 )
light_energy = 2.55
shadow_enabled = true
omni_range = 23.2113

[node name="OmniLight11" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0185, 4.41976, -22.1007 )
light_color = Color( 0.976471, 0.882353, 0.717647, 1 )
omni_range = 14.5235

[node name="OmniLight7" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -55.6087, 7.88134, -5.82701 )
light_energy = 2.55
shadow_enabled = true
omni_range = 23.2113

[node name="OmniLight2" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.625, 4.83783, -60.6578 )
light_energy = 2.55
shadow_enabled = true
omni_range = 12.0

[node name="OmniLight8" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 56.4067, 2.74357, -61.0138 )
light_energy = 14.83
light_negative = true
shadow_enabled = true
omni_range = 5.12029

[node name="OmniLight9" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 62.967, 2.94821, -61.0138 )
light_energy = 16.0
light_negative = true
shadow_enabled = true
omni_range = 6.00259

[node name="OmniLight3" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4191, 5.67695, -61.2198 )
light_energy = 2.55
shadow_enabled = true
omni_range = 9.11138

[node name="OmniLight4" type="OmniLight" parent="Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.2474, 5.67695, -61.2198 )
light_energy = 2.55
shadow_enabled = true
omni_range = 9.11138

[node name="aniLicht" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="aniLicht"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -46.2373, 4.32011, 6.30667 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="aniLicht/MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00398254, -0.011869, 0.017632 )
light_color = Color( 0.494118, 0.847059, 1, 1 )
light_energy = 10.0
light_indirect_energy = 16.0
light_specular = 1.0
shadow_enabled = true
omni_range = 3.16349

[node name="World" type="Spatial" parent="."]

[node name="Level1" parent="World" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -60.3397, 0, 0 )

[node name="Level2" parent="World" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.2511, 1.27325, -11.849 )

[node name="Level3" parent="World" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8001, 1.44, -59.4244 )

[node name="Tempel" parent="World" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.2196, -2.871, -50.0311 )

[node name="Statuen" type="Spatial" parent="World"]

[node name="Atlas_Pose" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 1.69056, 0, -2.45483, 0, 2.98064, 0, 2.45483, 0, 1.69056, -7.3481, 1.32659, -23.0321 )
mesh = ExtResource( 7 )
material/0 = null

[node name="Statue_01" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 1.43615, 0, 1.7285, 0, 2.24727, 0, -1.7285, 0, 1.43615, -19.8402, 1.00907, -21.5416 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_05" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.04062, 0, -0.941341, 0, 2.24727, 0, 0.941341, 0, -2.04062, -10.702, 1.00907, -49.7756 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_06" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.16609, 0, -0.598592, 0, 2.24727, 0, 0.598592, 0, -2.16609, -4.88895, 1.40629, -58.2944 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_07" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 2.08604, 0, 0.835875, 0, 2.24727, 0, -0.835875, 0, 2.08604, -7.00956, 1.40629, -61.7961 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_08" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 2.94871, 0, -0.0563619, 0, 2.94925, 0, 0.0563619, 0, 2.94871, 25.1163, 0.157457, -64.7719 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_09" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.94576, 0, 0.143404, 0, 2.94925, 0, -0.143404, 0, -2.94576, 24.7043, 0.157457, -57.1187 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_11" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 2.7965, 0, -0.0534524, 0, 2.797, 0, 0.0534524, 0, 2.7965, 30.0705, -0.173909, -65.1038 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_10" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.7937, 0, 0.136001, 0, 2.797, 0, -0.136001, 0, -2.7937, 29.6478, 0.0204355, -56.8669 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_13" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 2.65369, 0, 0.0322826, 0, 2.65388, 0, -0.0322826, 0, 2.65369, 35.7482, -0.235875, -65.0813 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_12" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.65349, 0, 0.0460872, 0, 2.65388, 0, -0.0460872, 0, -2.65349, 35.9003, -0.318183, -57.2563 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_15" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 2.35699, 0, 0.0286731, 0, 2.35716, 0, -0.0286731, 0, 2.35699, 41.5131, 0.0858673, -64.6438 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_14" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -2.35032, 0, 0.179487, 0, 2.35716, 0, -0.179487, 0, -2.35032, 41.6481, -0.0355769, -57.6937 )
mesh = ExtResource( 9 )
material/0 = null

[node name="Statue_03_1" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -1.1051, 0, -1.85257, 0, 2.15714, 0, 1.85257, 0, -1.1051, -14.6625, 1.1284, -13.6157 )
mesh = ExtResource( 10 )
material/0 = null

[node name="Statue_03_2" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 1.8084, 0.566418, 1.0306, 0.922627, -1.85555, -0.59913, 0.729188, 0.943063, -1.79782, -12.9857, 2.03091, -14.5653 )
mesh = ExtResource( 11 )
material/0 = null

[node name="Statue_02" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 0.919492, 0, -0.393108, 0, 1, 0, 0.393108, 0, 0.919492, -46.1164, 2.56174, 6.03938 )
mesh = ExtResource( 13 )
material/0 = null

[node name="Statue_03" type="MeshInstance" parent="World/Statuen"]
transform = Transform( -0.99286, 0, 0.119288, 0, 1, 0, -0.119288, 0, -0.99286, -20.9677, 1.38292, -33.4823 )
mesh = ExtResource( 13 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="World/Statuen/Statue_03"]
transform = Transform( -0.99286, 0, -0.119288, 0, 1, 0, 0.119288, 0, -0.99286, 0.00586319, 1.81848, 0.278936 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="World/Statuen/Statue_03/MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00398254, -0.011869, 0.017632 )
light_color = Color( 0.494118, 0.847059, 1, 1 )
light_energy = 6.0
light_indirect_energy = 16.0
light_specular = 1.0
shadow_enabled = true
omni_range = 6.84242

[node name="Statue_04" type="MeshInstance" parent="World/Statuen"]
transform = Transform( 0.46277, 0, -0.886478, 0, 1, 0, 0.886478, 0, 0.46277, -25.433, 1.48397, -45.8032 )
mesh = ExtResource( 13 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="World/Statuen/Statue_04"]
transform = Transform( -0.99286, 0, -0.119288, 0, 1, 0, 0.119288, 0, -0.99286, 0.00586319, 1.81848, 0.278936 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="World/Statuen/Statue_04/MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00398254, -0.011869, 0.017632 )
light_color = Color( 0.494118, 0.847059, 1, 1 )
light_energy = 6.0
light_indirect_energy = 16.0
light_specular = 1.0
shadow_enabled = true
omni_range = 4.0

[node name="Boden" type="Spatial" parent="World"]

[node name="aa_01_b1" type="MeshInstance" parent="World/Boden"]
transform = Transform( 2.56704, 0, 0, 0, 2.56704, 0, 0, 0, 2.56704, -9.62068, 1.32944, -24.343 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b2" type="MeshInstance" parent="World/Boden"]
transform = Transform( 2.56704, 0, 0, 0, 2.56704, 0, 0, 0, 2.56704, -9.62068, 1.32944, -21.0343 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b6" type="MeshInstance" parent="World/Boden"]
transform = Transform( -0.0384763, 0.128121, -2.56361, -0.0106615, 2.56382, 0.12826, 2.8583, 0.0112877, -0.034031, 26.9703, 0.00137984, -60.8898 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b7" type="MeshInstance" parent="World/Boden"]
transform = Transform( 0.00746213, -0.00082581, 2.56703, 0.00931618, 2.56703, 0.00080397, -2.85855, 0.00836394, 0.00670375, 30.23, -0.085096, -60.7695 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b8" type="MeshInstance" parent="World/Boden"]
transform = Transform( 2.85505, -0.109846, 0.0647432, 0.121908, 2.56465, 0.0160107, -0.0727919, -0.0132298, 2.56617, 36.2693, 0.109522, -61.0715 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b9" type="MeshInstance" parent="World/Boden"]
transform = Transform( -0.421227, -0.109846, 2.53664, -0.0326255, 2.56465, 0.10669, -2.82718, -0.0132298, -0.37917, 41.8252, 0.296863, -61.4639 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b4" type="MeshInstance" parent="World/Boden"]
transform = Transform( 1.82306, -0.206112, 1.07596, 0.198108, 2.55587, -3.26579e-09, -1.07472, 0.121506, 1.82516, -17.9144, 1.27853, -15.9501 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b5" type="MeshInstance" parent="World/Boden"]
transform = Transform( 2.80272, 0.124463, 0.660214, -0.0756693, 2.55857, -0.163257, -0.928321, 0.167216, 2.00658, -23.7131, 1.18986, -13.5515 )
use_in_baked_light = true
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="aa_01_b3" type="MeshInstance" parent="World/Boden"]
transform = Transform( 2.56704, 0, 0, 0, 2.56704, 0, 0, 0, 2.56704, -6.34982, 1.32944, -21.0343 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="Saulen" type="Spatial" parent="World"]

[node name="Saule_01" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 2.16213, 0, 1.50258, 0, 2.3963, 0, -1.42897, 0, 2.27351, -18.9807, 2.60115, -17.7468 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_12" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 3.00498, 0, 0.542782, 0, 2.81915, 0, -0.516191, 0, 3.15978, -24.2915, 3.08991, -37.7257 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_13" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 3.00498, 0, 0.542782, 0, 2.81915, 0, -0.516191, 0, 3.15978, -21.3837, 3.08991, -37.9338 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_15" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 3.00498, 0, 0.542782, 0, 2.81915, 0, -0.516191, 0, 3.15978, -16.9906, 3.08991, -52.3318 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_16" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 3.00498, 0, 0.542782, 0, 2.81915, 0, -0.516191, 0, 3.15978, -17.3382, 3.08991, -55.7445 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_14" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -1.20872e-07, -3.09677, 0.344197, 2.8002, -1.36151e-07, -8.76049e-09, 2.0748e-08, 0.334397, 3.18753, -22.82, 5.33347, -37.8913 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_11" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 4.75841, 0, 3.30687, 0, 5.27377, 0, -3.14487, 0, 5.00353, -30.8991, 4.6496, -13.5964 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_09" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 2.24739, 0, 4.0247, 0, 4.10396, 0, -3.82753, 0, 2.36316, -2.14313, 4.04707, -19.6187 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_10" type="MeshInstance" parent="World/Saulen"]
transform = Transform( 2.84326, 0.369077, 3.55923, -1.82904, 3.60436, 1.13214, -2.87598, -1.9274, 2.79873, -17.3336, 2.78744, -24.2684 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_02" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -1.49244, 0, 2.22796, 0, 2.3963, 0, -2.11881, 0, -1.56933, -63.3784, 3.83419, -2.51141 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_03" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -1.49244, 0, 2.22796, 0, 2.3963, 0, -2.11881, 0, -1.56933, -63.3674, 6.8931, -2.51918 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_05" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -0.927337, 0, 2.54475, 0, 2.3963, 0, -2.42008, 0, -0.975108, -59.0506, 3.83419, 2.57541 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_04" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -0.927337, 0, 2.54475, 0, 2.3963, 0, -2.42008, 0, -0.975108, -59.0395, 6.8931, 2.56763 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_07" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -0.927337, 0, 2.54475, 0, 2.3963, 0, -2.42008, 0, -0.975108, -48.6223, 3.77445, 4.05283 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_06" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -0.118562, 0, 2.72232, 0, 2.3963, 0, -2.58895, 0, -0.12467, -42.7551, 3.80895, 8.76003 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Saule_08" type="MeshInstance" parent="World/Saulen"]
transform = Transform( -0.637205, 0, 2.64152, 0, 2.3963, 0, -2.51211, 0, -0.67003, -42.9007, 3.65035, 6.01875 )
use_in_baked_light = true
mesh = ExtResource( 12 )
material/0 = ExtResource( 6 )

[node name="Deko" type="Spatial" parent="World"]

[node name="Gruppe1" type="Spatial" parent="World/Deko"]
transform = Transform( 0.69106, -0.504546, -0.517562, 0.63278, 0.768376, 0.0958497, 0.349321, -0.393741, 0.85026, -59.131, 3.72516, -6.13764 )

[node name="aa_01_w1" type="MeshInstance" parent="World/Deko/Gruppe1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999031, -0.35374, 0.517828 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a1" type="MeshInstance" parent="World/Deko/Gruppe1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100098, 0.273173, 0.503375 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="aa_01_w2" type="MeshInstance" parent="World/Deko/Gruppe1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544872, -0.35374, -0.131154 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a2" type="MeshInstance" parent="World/Deko/Gruppe1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544678, 0.273173, -0.122653 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="Gruppe2" type="Spatial" parent="World/Deko"]
transform = Transform( -0.308843, -0.0161323, -0.950976, -0.0944028, 0.995439, 0.0137721, 0.946416, 0.0940282, -0.308957, -49.3657, 4.89206, -2.8041 )

[node name="aa_01_w1" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999031, -0.35374, 0.517828 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w4" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( 0.999911, -1.11759e-08, 0.0133163, 1.49012e-08, 1, -5.96046e-08, -0.0133163, 7.45058e-08, 0.999912, -0.0631714, 1.54773, 0.5403 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a1" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100098, 0.273173, 0.503375 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="aa_01_w2" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544872, -0.35374, -0.131154 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w3" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( -0.0133168, 5.58794e-09, 0.999911, -2.98023e-08, 1, -3.72529e-09, -0.999912, -1.49012e-08, -0.0133168, 0.581608, 1.54773, -0.108677 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a2" type="MeshInstance" parent="World/Deko/Gruppe2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544678, 0.273173, -0.122653 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="Gruppe3" type="Spatial" parent="World/Deko"]
transform = Transform( 0.374818, 0.0590924, 0.925213, 0.00675389, 0.997766, -0.0664624, -0.927074, 0.0311601, 0.373582, -31.0433, 2.35703, -5.23095 )

[node name="aa_01_w1" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999031, -0.35374, 0.517828 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w4" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( 0.999911, -1.11759e-08, 0.0133163, 1.49012e-08, 1, -5.96046e-08, -0.0133163, 7.45058e-08, 0.999912, -0.0631714, 1.54773, 0.5403 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a1" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100098, 0.273173, 0.503375 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="aa_01_w2" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544872, -0.35374, -0.131154 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w3" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( -0.0133168, 5.58794e-09, 0.999911, -2.98023e-08, 1, -3.72529e-09, -0.999912, -1.49012e-08, -0.0133168, 0.581608, 1.54773, -0.108677 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a2" type="MeshInstance" parent="World/Deko/Gruppe3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544678, 0.273173, -0.122653 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="Gruppe4" type="Spatial" parent="World/Deko"]
transform = Transform( 0.374818, 0.0590924, 0.925213, 0.00675389, 0.997766, -0.0664624, -0.927074, 0.0311601, 0.373582, -30.8594, 5.46128, -5.134 )

[node name="aa_01_w1" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999031, -0.35374, 0.517828 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w4" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( 0.999911, -1.11759e-08, 0.0133163, 1.49012e-08, 1, -5.96046e-08, -0.0133163, 7.45058e-08, 0.999912, -0.0631714, 1.54773, 0.5403 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a1" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100098, 0.273173, 0.503375 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="aa_01_w2" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544872, -0.35374, -0.131154 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="aa_01_w3" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( -0.0133168, 5.58794e-09, 0.999911, -2.98023e-08, 1, -3.72529e-09, -0.999912, -1.49012e-08, -0.0133168, 0.581608, 1.54773, -0.108677 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 6 )

[node name="a_01_a2" type="MeshInstance" parent="World/Deko/Gruppe4"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.544678, 0.273173, -0.122653 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.0703484, 0, -0.997522, 0, 1, 0, 0.997522, 0, 0.0703484, -71.8159, 2.64831, 1.97316 )
max_speed = 2.0
max_running_speed = 5.0
max_stair_height = 0.4
allowChangeFlying = true

[node name="Info" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="Info"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Info/MarginContainer"]
margin_right = 1024.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Info/MarginContainer/CenterContainer"]
margin_left = 485.0
margin_top = 57.0
margin_right = 538.0
margin_bottom = 143.0

[node name="fpsLabel" type="Label" parent="Info/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 14.0
text = "Test FPS"

[node name="vertices" type="Label" parent="Info/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 53.0
margin_bottom = 32.0
text = "Test FPS"

[node name="timeProcess" type="Label" parent="Info/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 53.0
margin_bottom = 50.0
text = "Test FPS"

[node name="drawCalls" type="Label" parent="Info/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 53.0
margin_bottom = 68.0
text = "Test FPS"

[node name="memory" type="Label" parent="Info/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 53.0
margin_bottom = 86.0
text = "Test FPS"
